# Medguide_ROS

./: .gitignore  DEVLOG.md  LICENSE  README.md  explain_task.txt  explain_to_professor.md  medguide_control.py  pyrightconfig.json  run.sh  run_experiment.sh  run_mission.sh  run_project.sh  run_teleop.sh  setup.sh  test.sh
.devin/: wiki.json
docs/: experiment_plan.md  experiment_protocol.md  experiment_report_template.md  experiment_runbook.md  final_synthesis.md  follow_up_experiments.md  phd_portfolio_narrative.md  real_robot_deployment.md  research_methodology.md  research_paper_full.md  research_paper_structure.md  results_interpretation.md
docs/archive/: DELIVERABLES.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  QUICK_REFERENCE.md  docker-compose.yml  docker-helper.sh
docs/archive/config/: mission_params.yaml  system_config.yaml
docs/archive/launch/: medguide_navigation.launch.py  unified.launch.py
docs/archive/medguide_bringup/: CMakeLists.txt  package.xml
docs/archive/medguide_bringup/config/: nav2_params_hospital.yaml  perception_params.yaml  task_params.yaml
docs/archive/medguide_bringup/launch/: gazebo_bringup.launch.py  medguide_perception.launch.py  medguide_tasks.launch.py  nav2_bringup.launch.py
docs/archive/medguide_bringup/resource/: medguide_bringup
docs/archive/medguide_navigation/: package.xml  setup.cfg  setup.py
docs/archive/medguide_navigation/medguide_navigation/: navigation_goal_sender_node.py
docs/archive/medguide_navigation/resource/: medguide_navigation
docs/archive/medguide_perception/: package.xml  setup.cfg  setup.py
docs/archive/medguide_perception/medguide_perception/: obstacle_detector_node.py
docs/archive/medguide_perception/resource/: medguide_perception
docs/archive/medguide_tasks/: package.xml  setup.cfg  setup.py
docs/archive/medguide_utils/: package.xml  setup.cfg  setup.py
docs/archive/scripts/: monitor_emergency_stop.py  monitor_mission.py  test_mission.py
experiments/: analyze_results.py
logs/: baseline.csv  experiment_20260320_104307.csv  inflation_085.csv  planner_5hz.csv  realtime_test.csv  test_trial.csv  velocity_040.csv
maps/: hospital_map.pgm  hospital_map.yaml
rviz/: medguide_simulation.rviz
src/medguide_msgs/: CMakeLists.txt  package.xml
src/medguide_msgs/msg/: GoalResult.msg  MissionStatus.msg  SystemState.msg
src/medguide_msgs/srv/: RunExperiment.srv
src/medguide_robot/: .flake8  package.xml  setup.cfg  setup.py
src/medguide_robot/config/: nav2_params.yaml  robot_params.yaml  slam_params.yaml
src/medguide_robot/launch/: gazebo_sim.launch.py  medguide_full.launch.py  nav2_navigation.launch.py  slam_mapping.launch.py
src/medguide_robot/medguide_robot/: diagnostics_node.py  experiment_orchestrator_node.py  mission_logger_node.py  mission_scheduler_node.py  obstacle_detector_node.py  sensor_monitor_node.py
src/medguide_robot/rviz/: medguide_simulation.rviz  nav2_navigation.rviz  slam_mapping.rviz
src/medguide_robot/scripts/: analyze_results.py  dashboard.py  orchestrator.py  run_experiment.py
src/medguide_robot/test/: test_flake8.py  test_mission_states.py  test_obstacle_logic.py  test_pep257.py
src/medguide_robot/worlds/: hospital_floor.world
worlds/: hospital_floor.world
(+7 files in other folders)
