<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>medguide_bringup</name>
  <version>0.1.0</version>
  <description>MedGuide launch and system orchestration package</description>
  <maintainer email="medguide@research.local">MedGuide Team</maintainer>
  <license>Apache-2.0</license>

  <author email="medguide@research.local">MedGuide Robotics Research</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ros2launch</exec_depend>
  <exec_depend>medguide_navigation</exec_depend>
  <exec_depend>medguide_perception</exec_depend>
  <exec_depend>medguide_tasks</exec_depend>
  <exec_depend>medguide_utils</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
